@@ -3,6 +3,8 @@
 
 Version 5.1.43
 
+  - Fix for Bug#26399958, UNABLE TO CONNECT TO MYSQL 8.0.3.
+
   - Fix for Bug#78313 (21931572), proxies not handling Object.equals(Object) calls correctly.
 
   - Fix for Bug#85885 (25874048), resultSetConcurrency and resultSetType are swapped in call to prepareStatement.
